gradio_app.pyダウンロード処理追加。

--- a/474_Gaze-LLE-DINOv3/gradio_colab_app.ipynb
+++ b/474_Gaze-LLE-DINOv3/gradio_colab_app.ipynb
@@ -79,6 +79,17 @@
     {
       "cell_type": "code",
       "source": [
+        "!wget https://raw.githubusercontent.com/Kazuhito00/PINTO_model_zoo-Gradio-Demo/refs/heads/main/474_Gaze-LLE-DINOv3/gradio_app.py"
+      ],
+      "metadata": {
+        "id": "0EGjo3l7zmlE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "!python gradio_app.py"
       ],
       "metadata": {
