--- a/474_Gaze-LLE-DINOv3/gradio_colab_app.ipynb
+++ b/474_Gaze-LLE-DINOv3/gradio_colab_app.ipynb
@@ -19,7 +19,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# パッケージインストール"
+        "# パッケージインストール（Install Packages）"
       ],
       "metadata": {
         "id": "3Zh7W9BT2TcD"
@@ -39,7 +39,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 重みダウンロード"
+        "# 重みダウンロード（Download Weights）"
       ],
       "metadata": {
         "id": "fAnRhDqz13ag"
@@ -70,7 +70,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Gradioアプリ起動"
+        "# Gradioアプリ起動（Run the Gradio App）"
       ],
       "metadata": {
         "id": "AnJUyOfO2ikH"
