--- a/473_HISDF/gradio_colab_app.ipynb
+++ b/473_HISDF/gradio_colab_app.ipynb
@@ -19,7 +19,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# パッケージインストール"
+        "# パッケージインストール（Install Packages）"
       ],
       "metadata": {
         "id": "3Zh7W9BT2TcD"
@@ -39,7 +39,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 重みダウンロード"
+        "# 重みダウンロード（Download Weights）"
       ],
       "metadata": {
         "id": "fAnRhDqz13ag"
@@ -53,13 +53,21 @@
       },
       "outputs": [],
       "source": [
-        "!wget https://raw.githubusercontent.com/PINTO0309/PINTO_model_zoo/refs/heads/main/474_Gaze-LLE-DINOv3/download.sh"
+        "!wget https://raw.githubusercontent.com/PINTO0309/PINTO_model_zoo/refs/heads/main/473_HISDF/download_n.sh\n",
+        "!wget https://raw.githubusercontent.com/PINTO0309/PINTO_model_zoo/refs/heads/main/473_HISDF/download_pico.sh\n",
+        "!wget https://raw.githubusercontent.com/PINTO0309/PINTO_model_zoo/refs/heads/main/473_HISDF/download_s.sh\n",
+        "!wget https://raw.githubusercontent.com/PINTO0309/PINTO_model_zoo/refs/heads/main/473_HISDF/download_x.sh"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "!source download.sh"
+        "# ダウンロード時間がかかるため、必要に応じてコメントアウトを外す\n",
+        "# Since downloading takes time, uncomment it only when needed.\n",
+        "!source download_n.sh  # 2824M\n",
+        "# !source download_pico.sh  # 2722M\n",
+        "# !source download_s.sh  # 3130M\n",
+        "# !source download_x.sh  # 15G"
       ],
       "metadata": {
         "id": "uw7r17YD1ssb"
@@ -70,7 +78,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Gradioアプリ起動"
+        "# Gradioアプリ起動（Run the Gradio App）"
       ],
       "metadata": {
         "id": "AnJUyOfO2ikH"
