--- a/478_SC/gradio_colab_app.ipynb
+++ b/478_SC/gradio_colab_app.ipynb
@@ -17,7 +17,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install -q onnx onnxruntime-gpu gradio bbalg"
+        "!pip install -q onnx onnxruntime-gpu gradio"
       ]
     },
     {
